@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 9.00
+# Visual C++ Express 2005
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "libevent", "libevent.vcproj", "{717D45D6-AAF9-4091-BBA0-244D86400EFC}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Win32 = Debug|Win32
+		Release|Win32 = Release|Win32
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{717D45D6-AAF9-4091-BBA0-244D86400EFC}.Debug|Win32.ActiveCfg = Debug|Win32
+		{717D45D6-AAF9-4091-BBA0-244D86400EFC}.Debug|Win32.Build.0 = Debug|Win32
+		{717D45D6-AAF9-4091-BBA0-244D86400EFC}.Release|Win32.ActiveCfg = Release|Win32
+		{717D45D6-AAF9-4091-BBA0-244D86400EFC}.Release|Win32.Build.0 = Release|Win32
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
